force-app/main/default/objects/PIM_Audit_Trail__c/PIM_Audit_Trail__c.object-meta.xml
<CustomObject>
    <label>PIM Audit Trail</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>PIM Audit Trail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PIM Audit Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>