force-app/main/default/objects/PIM_Audit_Trail__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Change Tracker</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>