force-app/main/default/objects/PIM_Audit_Trail__c/fields/PIM_Product_Stage__c.field-meta.xml
<CustomField>
    <fullName>PIM_Product_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIM Product Stage</label>
    <referenceTo>PIM_Product_Stage__c</referenceTo>
    <relationshipLabel>PIM Audit Trails</relationshipLabel>
    <relationshipName>PIM_Audit_Trails</relationshipName>
    <type>Lookup</type>
</CustomField>