force-app/main/default/objects/PIM_Audit_Trail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>PIM Audit Trails</relationshipLabel>
    <relationshipName>PIM_Audit_Trails</relationshipName>
    <type>Lookup</type>
</CustomField>