force-app/main/default/objects/PIM_Audit_Trail__c/fields/Source_of_Action__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Action__c</fullName>
    <label>Source of Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Publish</fullName>
            </value>
            <value>
                <fullName>Bulk Publish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>